--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -1,75 +1,37 @@
-# Use the latest stable version of Semaphore 2.0 YML syntax:
 version: v1.0
-
-# Name your pipeline. In case you connect multiple pipelines with promotions,
-# the name will help you differentiate between, for example, a CI build phase
-# and delivery phases.
 name: Semaphore JavaScript Example Pipeline
-
-# An agent defines the environment in which your code runs.
-# It is a combination of one of available machine types and operating
-# system images.
-# See https://docs.semaphoreci.com/article/20-machine-types
-# and https://docs.semaphoreci.com/article/32-ubuntu-1804-image
 agent:
   machine:
     type: e1-standard-2
-    os_image: ubuntu1804
-
-# Blocks are the heart of a pipeline and are executed sequentially.
-# Each block has a task that defines one or more jobs. Jobs define the
-# commands to execute.
-# See https://docs.semaphoreci.com/article/62-concepts
+    os_image: ubuntu2004
 blocks:
-  - name: 📦 Install dependencies
+  - name: "\U0001F4E6 Install dependencies"
     task:
-      # Set environment variables that your project requires.
-      # See https://docs.semaphoreci.com/article/66-environment-variables-and-secrets
       env_vars:
         - name: NODE_ENV
           value: test
         - name: CI
           value: 'true'
-
-      # This block runs two jobs in parallel and they both share common
-      # setup steps. We can group them in a prologue.
-      # See https://docs.semaphoreci.com/article/50-pipeline-yaml#prologue
       prologue:
         commands:
-          # Get the latest version of our source code from GitHub:
           - checkout
-
-          # Use the version of Node.js specified in .nvmrc.
-          # Semaphore provides nvm preinstalled.
           - nvm use
           - node --version
           - npm --version
       jobs:
-        # First parallel job:
         - name: client npm install and cache
           commands:
             - cd src/client
-
-            # Restore dependencies from cache. This command will not fail in
-            # case of a cache miss. In case of a cache hit, npm install will
-            # run very fast.
-            # For more info on caching, see https://docs.semaphoreci.com/article/68-caching-dependencies
-            - cache restore client-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),client-node-modules-$SEMAPHORE_GIT_BRANCH,client-node-modules-master
+            - 'cache restore client-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),client-node-modules-$SEMAPHORE_GIT_BRANCH,client-node-modules-master'
             - npm install
-
-            # Store the latest version of node modules in cache to reuse in
-            # further blocks:
             - cache store client-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json) node_modules
-
-        # Second parallel job:
         - name: server npm install and cache
           commands:
             - cd src/server
-            - cache restore server-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),server-node-modules-$SEMAPHORE_GIT_BRANCH,server-node-modules-master
+            - 'cache restore server-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),server-node-modules-$SEMAPHORE_GIT_BRANCH,server-node-modules-master'
             - npm install --legacy-peer-deps
             - cache store server-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json) node_modules
-
-  - name: 🔍 Lint
+  - name: "\U0001F50D Lint"
     task:
       env_vars:
         - name: NODE_ENV
@@ -86,18 +48,14 @@ blocks:
         - name: Client Lint
           commands:
             - cd src/client
-            # At this point we can assume 100% cache hit rate of node modules:
-            - cache restore client-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),client-node-modules-$SEMAPHORE_GIT_BRANCH,client-node-modules-master
-
-            # Run task as defined in package.json:
+            - 'cache restore client-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),client-node-modules-$SEMAPHORE_GIT_BRANCH,client-node-modules-master'
             - npm run lint
         - name: Server Lint
           commands:
             - cd src/server
-            - cache restore server-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),server-node-modules-$SEMAPHORE_GIT_BRANCH,server-node-modules-master
+            - 'cache restore server-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),server-node-modules-$SEMAPHORE_GIT_BRANCH,server-node-modules-master'
             - npm run lint
-
-  - name: 🧪 Unit Tests
+  - name: "\U0001F9EA Unit Tests"
     task:
       env_vars:
         - name: NODE_ENV
@@ -115,20 +73,19 @@ blocks:
           commands:
             - export NAME="Client tests"
             - cd src/client
-            - cache restore client-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),client-node-modules-$SEMAPHORE_GIT_BRANCH,client-node-modules-master
+            - 'cache restore client-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),client-node-modules-$SEMAPHORE_GIT_BRANCH,client-node-modules-master'
             - npm test
         - name: Server Unit Tests
           commands:
             - export NAME="Server tests"
             - cd src/server
-            - cache restore server-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),server-node-modules-$SEMAPHORE_GIT_BRANCH,server-node-modules-master
+            - 'cache restore server-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),server-node-modules-$SEMAPHORE_GIT_BRANCH,server-node-modules-master'
             - npm test
       epilogue:
         always:
           commands:
-            - "[[ -f junit.xml ]] && test-results publish --name \"🧪 $NAME\" junit.xml"
-
-  - name: 🔄 E2E Tests
+            - "[[ -f junit.xml ]] && test-results publish --name \"\U0001F9EA $NAME\" junit.xml"
+  - name: "\U0001F504 E2E Tests"
     task:
       env_vars:
         - name: NODE_ENV
@@ -141,34 +98,28 @@ blocks:
           - nvm use
           - node --version
           - npm --version
-          # Start a Postgres database. On Semaphore, databases run in the same
-          # environment as your code.
-          # See https://docs.semaphoreci.com/article/32-ubuntu-1804-image#databases-and-services
           - sem-service start postgres
-          # With unrestricted sudo access, you can install any additional
-          # system package:
           - sudo apt-get install -y libgtk2.0-0
       jobs:
         - name: Client E2E Tests
           commands:
             - export NAME="Client tests"
             - cd src/client
-            - cache restore client-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),client-node-modules-$SEMAPHORE_GIT_BRANCH,client-node-modules-master
+            - 'cache restore client-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),client-node-modules-$SEMAPHORE_GIT_BRANCH,client-node-modules-master'
             - npx cypress install
-            - npm run test:e2e
+            - 'npm run test:e2e'
         - name: Server E2E Tests
           commands:
             - export NAME="Server tests"
             - cd src/server
-            - cache restore server-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),server-node-modules-$SEMAPHORE_GIT_BRANCH,server-node-modules-master
+            - 'cache restore server-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),server-node-modules-$SEMAPHORE_GIT_BRANCH,server-node-modules-master'
             - cp ormconfig.ci.json ormconfig.json
-            - npm run migrate:up
-            - npm run test:e2e
+            - 'npm run migrate:up'
+            - 'npm run test:e2e'
       epilogue:
         always:
           commands:
-            - "[[ -f junit.xml ]] && test-results publish --name \"🏗️ $NAME\" junit.xml"
-
+            - "[[ -f junit.xml ]] && test-results publish --name \"\U0001F3D7️ $NAME\" junit.xml"
 after_pipeline:
   task:
     jobs:
